2024-08-04 Philipp Klaus Krause <philipp@colecovision.eu>

	* Merge sdcc from f8 branch to trunk.

2024-08-04 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/f8/gen.c:
	  Small f8 codegen improvements.

2024-08-02 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdas/asf8/f8mch.c,
	  src/f8/gen.c:
	  Adapt to instruction changes.

2024-07-31 Philipp Klaus Krause <philipp@colecovision.eu>

	* device/lib/f8/Makefile.in,
	  sdas/asf8/f8mch.c,
	  src/f8/gen.c:
	  Replace xchb by modified msk.

2024-07-29 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdas/asf8/f8mch.c:
	  Update xchw instruction.

2024-06-24 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/ports/f8/spec.mk:
	  Adapt f8 regression testing to new simulator directory structure.

2024-07-24 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/wchar.c.in: added _FORTIFY_SOURCE==3 exception

2024-07-23 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/cases/HTMLgen.py: fixed bad escape no longer accepted
	  by Python 3.12

2024-07-17 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/z80/__ultobcd.s: removed comments about odd ABI,
	  added .optsdcc -mz80 sdcccall(1)

2024-07-17 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/ds390/__sdcc_atomic_maybe_rollback.c: bugfix moved push psw,
	  renamed __sdcc_atomic_exchange_rollback_impl to sdcc_atomic_exchange_rollback_start,
	  changed __sdcc_atomic_exchange_rollback_impl+40 to sdcc_atomic_exchange_rollback_end,
	  bugfix outer_skip, 3$ & 4$
	* device/lib/mcs51/__sdcc_atomic_maybe_rollback.asm: bugfix moved push psw,
	  renamed __sdcc_atomic_exchange_rollback_impl to sdcc_atomic_exchange_rollback_start,
	  changed __sdcc_atomic_exchange_rollback_impl+40 to sdcc_atomic_exchange_rollback_end
	* device/lib/ds390/atomic_flag_test_and_set.c,
	* device/lib/mcs51/atomic_flag_test_and_set.asm: renamed
	  ___sdcc_atomic_exchange_gptr_impl to sdcc_atomic_exchange_gptr_impl,