@@ -455,25 +455,4 @@ cl_f8::CLRW_A(t_mem code)
   return resGO;
 }
 
-int
-cl_f8::xchb(int b)
-{
-  b&= 7;
-  u8_t mask= 1<<b;
-  class cl_cell8 &c= m_mm();
-  u8_t t= c.R(), a= acc8->get();
-  u8_t mbit= t&mask;
-  vc.rd++;
-  t&= ~mask;
-  if (a & 1) t|= mask;
-  acc8->W(mbit?1:0);
-  c.write(t);
-  rF&= ~flagZ;
-  if (!mbit) rF|= flagZ;
-  cF.W(rF);
-  vc.wr++;
-  return resGO;
-}
-
-
 /* End of f8.src/imove.cc */
